--- a/array/bignumber.html
+++ b/array/bignumber.html
@@ -4,18 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sum</title>
+    <title>big number</title>
 </head>
 <body>
     
     <script>
 
-        const number=prompt("enter a value");
-        let sum=0;
-        for( let i=1;i<=number;i++){
-            sum+=i;
-        }
-        document.write(sum)
-    </script>
+var array = [3 , 6, 2, 56, 32, 5, 89, 32];
+var largest= 0;
+
+for (i=0; i<array.length; i++){
+    if (array[i]>largest) {
+        largest=array[i];
+    }
+}
+
+
+
+
+console.log(largest);
+
+         
+
+        </script>
 </body>
 </html>
