--- a/array/small-number.html
+++ b/array/small-number.html
@@ -4,18 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sum</title>
+    <title>small number</title>
 </head>
 <body>
-    
     <script>
 
-        const number=prompt("enter a value");
-        let sum=0;
-        for( let i=1;i<=number;i++){
-            sum+=i;
-        }
-        document.write(sum)
+       
+
+         var array = [3 , 6, 2, 56, 32, 5, 89, 32,1];
+var largest=array.length;
+
+for (i=0; i<array.length; i++){
+    if (array[i]<largest) {
+        largest=array[i];
+    }
+}
+
+
+
+
+console.log(largest);
+
+
+
+
     </script>
 </body>
 </html>
