--- a/array/bignumber.html
+++ b/array/bignumber.html
@@ -10,7 +10,7 @@
     
     <script>
 
-var array = [3 , 6, 2, 56, 32, 5, 89, 32];
+var array = [3 , 6, 2, 156, 32, 5,86,100, 32];
 var largest= 0;
 
 for (i=0; i<array.length; i++){
@@ -22,7 +22,8 @@ for (i=0; i<array.length; i++){
 
 
 
-console.log(largest);
+
+document.write(largest);
 
          
 
