--- a/array/small-number.html
+++ b/array/small-number.html
@@ -11,19 +11,19 @@
 
        
 
-         var array = [3 , 6, 2, 56, 32, 5, 89, 32,1];
-var largest=array.length;
+         var array = [123,12,15,19,707,199];
+var small=array[0];
 
 for (i=0; i<array.length; i++){
-    if (array[i]<largest) {
-        largest=array[i];
+    if (array[i]<small) {
+        small=array[i];
     }
 }
 
 
 
 
-console.log(largest);
+document.write(small);
 
 
 
