--- a/practice-array/array.html
+++ b/practice-array/array.html
@@ -4,30 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>small number</title>
+    <title>array</title>
 </head>
 <body>
     <script>
-
+   
        
 
-         var array = [123,12,15,19,707,199];
-var small=array[0];
-
-for (i=0; i<array.length; i++){
-    if (array[i]<small) {
-        small=array[i];
-    }
-}
 
 
-
-
-document.write(small +"small Number");
-
-
-
-
-    </script>
+   </script>
+    
 </body>
 </html>
