--- a/tables/tables.html
+++ b/tables/tables.html
@@ -173,6 +173,38 @@
         </tr>
 		
 		
+		<tr>
+            <td>15</td>
+            <td>FIND</td>
+            <td>array.find(vasanth =>vasanth>10)</td>
+            <td>let array=[10,12,20,18,11,]</td>
+            <td> 12</td>
+			<td>10 next value only</td>
+        </tr>
+		
+		
+		<tr>
+            <td>16</td>
+            <td>FILDER</td>
+            <td>array.filder</td>
+            <td> const fil=[21,12,9,28,10]</td>
+            <td> 28,21</td>
+			<td>18 next value all </td>
+        </tr>
+		
+		<tr>
+            <td>17</td>
+            <td>REDUS</td>
+            <td>add.redus</td>
+            <td>let  add=[100,20,15,10,3,5,];</td>
+            <td>153</td>
+			<td>all value + the number 153 </td>
+        </tr>
+		
+		
+		
+		
+		
 		
 		
     </table>
