--- a/armstrong/armstrong.html
+++ b/armstrong/armstrong.html
@@ -4,21 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>factorial</title>
+    <title>armstrong or not</title>
 </head>
 <body>
-  <script>
-    const number=prompt("enter a value");
-    let sum=1;
-    for( let i=1;i<=number;i++){
-        sum*=i;
-    }
-    document.write(sum);
     
-
-    
-</script>
-
-
 </body>
 </html>
