--- a/arraymethod/at.html
+++ b/arraymethod/at.html
@@ -4,30 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>small number</title>
+    <title>AT</title>
 </head>
 <body>
     <script>
-
-       
-
-         var array = [123,12,15,19,707,199];
-var small=array[0];
-
-for (i=0; i<array.length; i++){
-    if (array[i]<small) {
-        small=array[i];
-    }
-}
-
-
-
-
-document.write(small +"small Number");
-
-
-
-
+        let array = [5, 12, 8, 130, 44];
+        let index = 2;
+        console.log(array.at(index));
     </script>
+    
 </body>
 </html>
