--- a/arraymethod/concat.html
+++ b/arraymethod/concat.html
@@ -4,30 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>small number</title>
+    <title>concat</title>
 </head>
 <body>
     <script>
-
-       
-
-         var array = [123,12,15,19,707,199];
-var small=array[0];
-
-for (i=0; i<array.length; i++){
-    if (array[i]<small) {
-        small=array[i];
-    }
-}
-
-
-
-
-document.write(small +"small Number");
-
-
-
-
+        let game1=["kabaddi", "cricket","foodball"];
+        let game2=["vollayball","hokcy","balls"]
+        let game3=game1.concat(game2);
+        console.log(game3);
     </script>
+    
 </body>
 </html>
