--- a/arraymethod/filder.html
+++ b/arraymethod/filder.html
@@ -4,28 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>small number</title>
+    <title>FILDER</title>
 </head>
 <body>
+    
     <script>
+        const fil=[21,12,9,28,10];
+         const val= fil.filter(age)
+         function age(number){
 
-       
-
-         var array = [123,12,15,19,707,199];
-var small=array[0];
-
-for (i=0; i<array.length; i++){
-    if (array[i]<small) {
-        small=array[i];
-    }
-}
-
-
-
-
-document.write(small +"small Number");
-
-
+            return number >18;
+         }
+         console.log(val);
 
 
     </script>
