--- a/arraymethod/push.html
+++ b/arraymethod/push.html
@@ -4,29 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>small number</title>
+    <title>push</title>
 </head>
 <body>
     <script>
-
-       
-
-         var array = [123,12,15,19,707,199];
-var small=array[0];
-
-for (i=0; i<array.length; i++){
-    if (array[i]<small) {
-        small=array[i];
-    }
-}
-
-
-
-
-document.write(small +"small Number");
-
-
-
+          let foods=["saled","sandwich","bread","stea"];
+          let res= foods.push("fred")  
+          console.log(foods)
 
     </script>
 </body>
