--- a/arraymethod/reduce.html
+++ b/arraymethod/reduce.html
@@ -4,30 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>small number</title>
+    <title>reduce</title>
 </head>
 <body>
     <script>
-
-       
-
-         var array = [123,12,15,19,707,199];
-var small=array[0];
-
-for (i=0; i<array.length; i++){
-    if (array[i]<small) {
-        small=array[i];
-    }
-}
-
-
-
-
-document.write(small +"small Number");
-
-
-
-
+         
+         let  add=[100,20,15,10,3,5,];
+         let  a=add.reduce(my);
+         function my(total,num){
+            return total + num;
+         }
+         console.log(a);
     </script>
 </body>
 </html>
