--- a/arraymethod/shift.html
+++ b/arraymethod/shift.html
@@ -4,28 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>small number</title>
+    <title>shift</title>
 </head>
 <body>
     <script>
 
-       
+        //first value remove//
 
-         var array = [123,12,15,19,707,199];
-var small=array[0];
+        let array=[1,2,3,4,];
 
-for (i=0; i<array.length; i++){
-    if (array[i]<small) {
-        small=array[i];
-    }
-}
-
-
-
-
-document.write(small +"small Number");
-
-
+        let firstvalue=array.shift();
+        console.log(array);
+        console.log(firstvalue);
 
 
     </script>
