--- a/arraymethod/push.html
+++ b/arraymethod/push.html
@@ -10,7 +10,7 @@
     <script>
           let foods=["saled","sandwich","bread","stea"];
           let res= foods.push("fred")  
-          console.log(foods)
+          console.log(foods);
 
     </script>
 </body>
