--- a/arraymethods/join.html
+++ b/arraymethods/join.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AT</title>
+    <title>join</title>
 </head>
 <body>
     <script>
-        let array = [5, 12, 10, 130, 44];
-        let index = 2;
-        console.log(array.at(index));
+          let a=["pandi","arul","ganesh","rupu","gopi"]
+               console.log(a)
+            console.log(a.join("*"));
     </script>
     
 </body>
