--- a/arraymethods/push.html
+++ b/arraymethods/push.html
@@ -139,13 +139,20 @@
 
 
           
+            // let a=["pandi","rupu","ganesh"]
+            //     console.log(a);
+            //     console.log(a.toString);
             
 
+                // let a=[1,2,3,4,5,6,7,8,9]
+                // console.log(a);
+                // console.log(a.toString);
 
 
-
-
-
+                let a=[1,2,3,4]
+                console.log(a);
+                console.log(a.slice(2,-2));
+z
 
 
 
